framework/tests/framework/UnimportedExtends2.java
// :: error: (type.checking.not.run)

public class UnimportedExtends2 {
    // :: error: cannot find symbol
    class Inner extends UnimportedClass {}
}
